--- a/index.html
+++ b/index.html
@@ -1,6 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Smart Irrigation Using IIoT</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #f4f8fc;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    header {
+      background-color: #007bff;
+      color: white;
+      padding: 20px 0;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    h1 {
+      margin: 0;
+      font-size: 24px;
+      letter-spacing: 1px;
+    }
+
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin: 30px auto;
+      max-width: 1000px;
+    }
+
+    .card {
+      background-color: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+      padding: 25px;
+      width: 250px;
+      transition: 0.3s;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+    }
+
+    .label {
+      color: #666;
+      font-size: 14px;
+      margin-bottom: 8px;
+    }
+
+    .value {
+      font-size: 26px;
+      font-weight: bold;
+      color: #333;
+    }
+
+    .footer {
+      margin-top: 40px;
+      color: #999;
+      font-size: 13px;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Smart Irrigation Using IIoT</h1>
+  </header>
+
+  <div class="container">
+    <div class="card">
+      <div class="label">Moisture</div>
+      <div class="value" id="field1">-- %</div>
+    </div>
+    <div class="card">
+      <div class="label">Temperature</div>
+      <div class="value" id="field2">-- °C</div>
+    </div>
+    <div class="card">
+      <div class="label">Voltage</div>
+      <div class="value" id="field3">-- V</div>
+    </div>
+    <div class="card">
+      <div class="label">Current</div>
+      <div class="value" id="field4">-- A</div>
+    </div>
+    <div class="card">
+      <div class="label">Pump Status</div>
+      <div class="value" id="field5">--</div>
+    </div>
+  </div>
+
+  <div class="footer">
+    &copy; 2025 - IIoT Smart Project
+  </div>
+
+  <script>
+    const channelID = 2986822;
+
+    async function fetchData() {
+      const url = `https://api.thingspeak.com/channels/${channelID}/feeds/last.json`;
+
+      try {
+        const res = await fetch(url);
+        const data = await res.json();
+
+        document.getElementById("field1").textContent = data.field1 + " %";
+        document.getElementById("field2").textContent = data.field2 + " °C";
+        document.getElementById("field3").textContent = data.field3 + " V";
+        document.getElementById("field4").textContent = data.field4 + " A";
+        document.getElementById("field5").textContent = data.field5 === "1" ? "ON" : "OFF";
+      } catch (err) {
+        console.error("Error:", err);
+      }
+    }
+
+    fetchData();
+    setInterval(fetchData, 15000);
+  </script>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
   <meta charset="UTF-8">
   <title>Smart Irrigation Readings</title>
   <style>
