--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
       color: #999;
       font-size: 13px;
     }
+
+    .warning {
+      background-color: #fff3cd;
+      color: #856404;
+      border: 1px solid #ffeeba;
+      border-radius: 8px;
+      padding: 15px;
+      margin: 20px auto;
+      width: 80%;
+      max-width: 600px;
+      font-weight: 500;
+    }
   </style>
 </head>
 <body>
@@ -97,6 +109,10 @@
     </div>
   </div>
 
+  <div class="warning" id="warningBox">
+    🔺 Last Warning: Loading...
+  </div>
+
   <div class="footer">
     &copy; 2025 - IIoT Smart Project
   </div>
@@ -116,8 +132,13 @@
         document.getElementById("field3").textContent = data.field3 + " V";
         document.getElementById("field4").textContent = data.field4 + " A";
         document.getElementById("field5").textContent = data.field5 === "1" ? "ON" : "OFF";
+
+        const warning = data.field6 || "Normal";
+        document.getElementById("warningBox").innerText = "🔺 Last Warning: " + warning;
+
       } catch (err) {
         console.error("Error:", err);
+        document.getElementById("warningBox").innerText = "⚠️ Failed to load warning.";
       }
     }
 
