--- a/index.html
+++ b/index.html
@@ -68,15 +68,13 @@
     }
 
     .warning {
-      background-color: #fff3cd;
-      color: #856404;
-      border: 1px solid #ffeeba;
       border-radius: 8px;
       padding: 15px;
       margin: 20px auto;
       width: 80%;
       max-width: 600px;
-      font-weight: 500;
+      font-weight: 600;
+      font-size: 16px;
     }
   </style>
 </head>
@@ -134,11 +132,27 @@
         document.getElementById("field5").textContent = data.field5 === "1" ? "ON" : "OFF";
 
         const warning = data.field6 || "Normal";
-        document.getElementById("warningBox").innerText = "🔺 Last Warning: " + warning;
+        const warningBox = document.getElementById("warningBox");
+
+        warningBox.innerText = "🔺 Last Warning: " + warning;
+
+        if (warning.toLowerCase() === "normal") {
+          warningBox.style.backgroundColor = "#d4edda"; // أخضر فاتح
+          warningBox.style.color = "#155724";           // أخضر غامق
+          warningBox.style.border = "1px solid #c3e6cb";
+        } else {
+          warningBox.style.backgroundColor = "#f8d7da"; // أحمر فاتح
+          warningBox.style.color = "#721c24";           // أحمر غامق
+          warningBox.style.border = "1px solid #f5c6cb";
+        }
 
       } catch (err) {
         console.error("Error:", err);
         document.getElementById("warningBox").innerText = "⚠️ Failed to load warning.";
+        const warningBox = document.getElementById("warningBox");
+        warningBox.style.backgroundColor = "#ffeeba";
+        warningBox.style.color = "#856404";
+        warningBox.style.border = "1px solid #ffeeba";
       }
     }
 
